--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -41,7 +41,9 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" [routerLink]="['/Addbook']" routerLinkActive="active">Reactive Forms</a></li>
+            <li><a class="dropdown-item" [routerLink]="['/jsonform']">JSON TO FORM</a></li>
             <li><a class="dropdown-item"  routerLinkActive="active"></a></li>
+            
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
