lifecycle component created

--- a/src/app/lifecyclehook/lifecyclehook.component.html
+++ b/src/app/lifecyclehook/lifecyclehook.component.html
@@ -1,1 +1,6 @@
-<app-lifecyclehookchild [name]="'Christopher'"></app-lifecyclehookchild>
+<!-- <app-lifecyclehookchild [name]="this.User.name"></app-lifecyclehookchild> -->
+ <app-lifecyclehookchild>
+    <p>
+    these content can be changed according to it
+    </p>
+ </app-lifecyclehookchild>
